language/move-lang/tests/move_check/translated_ir_tests/move/borrow_tests/copy_loc_borrowed_indirect_invalid.move
module 0x8675309::Tester {
    fun t() {
        let x = 0;
        let y = 0;
        let r1 = foo(&mut x, &mut y);
        copy x;
        r1;
    }

    fun foo(_r: &mut u64, r2: &mut u64): &mut u64 {
        r2
    }
}
